name:                judy-graph-db
version:             0.1.0.0
homepage:            https://github.com/tkvogt/judy-graph#readme
license:             BSD3
license-file:        LICENSE
author:              Tillmann Vogt
maintainer:          tillk.vogt@gmail.com
copyright:           2017 Tillmann Vogt
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:  benchmark/*.txt

library
  hs-source-dirs:      src
  exposed-modules:     JudyGraph, JudyGraph.FastAccess, JudyGraph.Enum, JudyGraph.Cypher
  other-modules:       Paths_judy_graph_db
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , cassava
                     , containers
                     , deepseq
                     , judy
                     , mtl
                     , semigroups
                     , streaming
                     , streaming-cassava
                     , streaming-bytestring
                     , streaming-with
                     , text
                     , vector
                     , word8

  default-language:    Haskell2010

executable judy-graph-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , judy
                     , judy-graph-db
                     , semigroups
                     , text
  default-language:    Haskell2010

test-suite judy-graph-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , hspec
                     , judy
                     , judy-graph-db
                     , semigroups
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


test-suite Example
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/examples
  main-is:             Example.hs
  build-depends:       base
                     , containers
                     , hspec
                     , judy
                     , judy-graph-db
                     , semigroups
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite SortNodes
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/examples
  main-is:             SortNodes.hs
  build-depends:       base
                     , containers
                     , hspec
                     , judy
                     , judy-graph-db
                     , semigroups
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark criterion
    build-depends:     base
                     , criterion >= 1.3
                     , judy
                     , judy-graph-db

    default-language: Haskell2010
    hs-source-dirs:   benchmark
    other-modules:    Paths_judy_graph_db
    main-is:          Bench.hs
    type:             exitcode-stdio-1.0

source-repository head
  type:     git
  location: https://github.com/tkvogt/judy-graph-db
