name:                judy-graph
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/judy-graph#readme
license:             BSD3
license-file:        LICENSE
author:              Tillmann Vogt
maintainer:          tillk.vogt@gmail.com
copyright:           2017 Tillmann Vogt
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     JudyGraph, Graph.FastAccess, Graph.Cypher
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , judy
                     , semigroups
                     , text
                     , vector

  default-language:    Haskell2010

executable judy-graph-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , judy
                     , judy-graph
                     , semigroups
  default-language:    Haskell2010

test-suite judy-graph-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , hspec
                     , judy
                     , judy-graph
                     , semigroups
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/judy-graph
